Partial cleanup of ProjectionFactory